[project]
name = "LOBE"
version = "0.0.1"
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
description = "A sound recording, promt managment and analysis tool."
dependencies = [
    "Werkzeug==0.15.5",
    "MarkupSafe==1.1.1",  # some dependency of jinja2 which is a dependency of flask
    "Flask >= 1.1.1",
    "Flask-Executor==0.9.3",
    "flask_reverse_proxy_fix==0.2.1",
    # audio processing
    "librosa==0.7.2",
    "numpy==1.21.0",
    "numba==0.47.0",  # librosa dependency
    "llvmlite==0.31.0",  # numba dependency
    "pydub==0.23.1",
    # utils
    "requests==2.28.2",  # http requests
    "tqdm==4.40.1",  # progress bars
    "termcolor==1.1.0",  # colored terminal output
    # database
    "psycopg2-binary==2.8.5",  # postgres driver
    "SQLAlchemy==1.3.6",  # ORM
    "Flask-SQLAlchemy==2.4.0",
    # management
    "alembic==1.0.11",  # migrations
    "Flask-Migrate==2.5.2",  # migrations
    "Flask-Script==2.0.6",  # cli
    # UI
    "WTForms==2.2.1",
    "WTForms-Alchemy==0.16.9",
    "WTForms-Components==0.10.4",
    "Flask-WTF==0.14.2",
    "Babel==2.9.1",  # localisation
    # security
    "Flask-Security >= 3.0.0",
]
[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[project.optional-dependencies]
dev = ["black", "ruff"]
