[project]
name = "LOBE"
version = "0.0.1"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
description = "A sound recording, promt managment and analysis tool."
dependencies = [
    "Flask~=2.2",
    "Flask-Executor~=0.10",  # async tasks
    # audio processing
    "librosa>=0.7.2",
    "numpy>=1.21.0",
    "numba>=0.47.0",  # librosa dependency
    "llvmlite>=0.31.0",  # numba dependency
    "pydub>=0.23.1",
    # utils
    "requests>=2.28.2",  # http requests
    "tqdm>=4.40.1",  # progress bars
    "termcolor>=1.1.0",  # colored terminal output
    # database
    "psycopg2-binary~=2.0",  # postgres driver
    "SQLAlchemy~=1.4",  # ORM
    "Flask-SQLAlchemy~=3.0",  # ORM
    "Flask-Migrate~=4.0",  # migrations - uses alembic
    # UI
    "WTForms~=3.0",  # forms, validation and utils, provides Form
    "Flask-WTF>=1.1.1",  # WTForms integration with Flask, CSRF protection, provides FlaskForm
    "Flask-Babel~=3.0",  # localisation
    "WTForms-Components>=0.10.5",  # custom form fields
    "WTForms-Alchemy>=0.18",  # WTForms integration for SQLAlchemy model forms, provides ModelForm
    # security
    "Flask-Security-Too~=5.0",
    "bcrypt", # password hashing for Flask-Security-Too
]
[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[project.optional-dependencies]
dev = ["black", "ruff", "isort"]
