[project]
name = "LOBE"
version = "0.0.3"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
description = "A sound recording, promt managment and analysis tool."
# this is an easy way to add dependencies from a file
# we want to have the dependencies in the file so we can install them seperately when building the docker image - for caching
dynamic = ["dependencies"]
[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[project.optional-dependencies]
dev = ["black", "ruff", "isort"]
prod = ["gunicorn"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
